CardItem & Detail modified by sqs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="longText">是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就</string>
+
 </resources>
