--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="longText">是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就是的JFK使得开发商的肌肤的就是房价肯定是附近看看附件是的飞机迪斯科解放的是开发付款的积分多少JFK酒店房间定界符独守空房的开发技术框架的飞机迪斯科解放看电视剧是单价为哦炯然就饿温热我认为哦软件为哦家里反对司法鉴定所靓女你的淑女了的少女放开来的v你的女裤休闲女裤联系处女下次就看了都是风景剩女了看你下次vv低利率了重新考虑考虑你问哦冏了我就</string>
+    <string name="longText">噫吁嚱，危乎高哉！蜀道之难，难于上青天！\n蚕丛及鱼凫，开国何茫然！\n尔来四万八千岁，不与秦塞通人烟。\n西当太白有鸟道，可以横绝峨眉巅。\n地崩山摧壮士死，然后天梯石栈相钩连。\n上有六龙回日之高标，下有冲波逆折之回川。\n黄鹤之飞尚不得过，猿猱欲度愁攀缘。\n青泥何盘盘，百步九折萦岩峦。\n扪参历井仰胁息，以手抚膺坐长叹。\n问君西游何时还？畏途巉岩不可攀。\n但见悲鸟号古木，雄飞雌从绕林间。\n又闻子规啼夜月，愁空山。\n蜀道之难，难于上青天，使人听此凋朱颜！\n连峰去天不盈尺，枯松倒挂倚绝壁。\n飞湍瀑流争喧豗，砯崖转石万壑雷。\n其险也如此，嗟尔远道之人胡为乎来哉！\n剑阁峥嵘而崔嵬，一夫当关，万夫莫开。\n所守或匪亲，化为狼与豺。\n朝避猛虎，夕避长蛇；磨牙吮血，杀人如麻。\n锦城虽云乐，不如早还家。\n蜀道之难，难于上青天，侧身西望长咨嗟！</string>
 
 </resources>
